# clearpath

./: .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  cli.py  dependencies.py  main.py
apps/api/app/core/: ai_policy.py  card_guards.py  config.py  crypto.py  database.py  defaults.py  feature_access.py  passwords.py  plaid_policy.py  planning_constants.py  security.py
apps/api/app/models/: __init__.py  auth.py  base.py  finance.py  operations.py  plaid.py  planning.py  subscriptions.py
apps/api/app/schemas/: auth.py  billing.py  (+13 more)
apps/api/clearpath_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/api/migrations/: README  env.py
apps/api/scripts/: copy_from_flask_sqlite.py  export_openapi.py
apps/api/tests/: conftest.py  test_auth_parity.py  test_billing_phase6.py  test_budgets_phase3.py  test_cash_projections_phase3.py  test_compliance_phase6.py  test_config_env.py  test_dashboard_analytics_phase3.py  test_docs_exposure.py  test_forecast_recurring_phase3.py  test_goals_phase3.py  test_loan_plans_phase3.py  test_mfa_phase4.py  test_migration_copy.py  test_migration_schema.py  test_monthly_plan_phase3.py  test_onboarding_defaults.py  test_onboarding_phase4.py  test_plaid_phase2b.py  test_planner_phase3.py  test_planning_items_phase3.py  test_planning_phase3.py  test_retirement_phase3.py  test_seed_phase6.py  test_settings_phase6.py  test_subscriptions_phase2c.py  test_transactions_phase2a.py
(+337 files in other folders)
