[project]
name = "clearpath-api"
version = "0.1.0"
description = "FastAPI backend for the ClearPath Finance rewrite"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "PyJWT>=2.10,<3.0",
  "cryptography>=42.0,<45.0",
  "Werkzeug>=3.1,<4.0",
  "typer>=0.15,<1.0",
  "python-dotenv>=1.0,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "duo-universal>=2.2,<3.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0"
]

[project.scripts]
clearpath = "app.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: tests that require external services such as Postgres"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*", "scripts*"]
